[ADD]国际化处理+注册功能+补充刷新令牌机制
